--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -2,7 +2,7 @@
   xshok-server-redirector:
     image: extremeshok/server-redirector:latest
     environment:
-      - TZ=${TZ:-UTC}
+      - TZ=UTC
       - TARGET=11.11.11.11
     restart: always
     ports:
@@ -27,7 +27,7 @@
       - 1080:1080
       - 3128:3128
       ### RSYNC
-      - 587:587
+      - 873:873
       ### SQL
       - 3306:3306
       - 5432:5432
