--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -1,3 +1,6 @@
+version: '2.1'
+########## SERVICES ########
+services:
 ###### xshok-server-redirector
   xshok-server-redirector:
     image: extremeshok/server-redirector:latest
@@ -39,8 +42,3 @@
       - 20000:20000
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=${SYSCTL_IPV6_DISABLED:-0}
-    networks:
-      network:
-        ipv4_address: ${IPV4_NETWORK:-172.22.1}.210
-        aliases:
-          - redirector
